--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -9,10 +9,10 @@
 		<p>
 			<h2>List of Abbreviations</h2>
 			<ul class="abbreviations">
-				<li><span class="abbr">A</span> (with <span class="abbr">Sh</span> prefixed) = E. Amélineau, <i>Œuvres de Schenoudi</i>, 1907 ff.</li>
-				<li><i class="dialect">A</i> = Achmimic dialect; <i class="dialect">A<span>²</span></i> = Subachmimic dialect.</li>
-				<li><span class="abbr">Absal</span> = Kitâb al-</li>
-				<li><span class="abbr">Abst</span> = Kitâb al-</li>
+				<li class="found"><span class="abbr">A</span> (with <span class="abbr">Sh</span> prefixed) = E. Amélineau, <i>Œuvres de Schenoudi</i>, 1907 ff.</li>
+				<li><i class="dialect">A</i> = Achmîmic dialect; <i class="dialect">A<span>²</span></i> = Subachmîmic dialect.</li>
+				<li><span class="abbr">Absal</span> = <i>Kitâb al-Abṣâlmudîyah al-Muḳaddasah al-Sanawîyah (Theotokia)</i>, Alexandria, 1908.</li>
+				<li><span class="abbr">Abst</span> = <i>Kitâb al-Abṣâliyât wal-Ṭaruḥât</i>, Old Cairo, 1913.</li>
 				<li><span class="abbr">Ac</span> = Acts of the Apostles.</li>
 				<li><span class="abbr">acc</span> = accusative.</li>
 				<li><span class="abbr">adj</span> = adjective.</li>
@@ -24,14 +24,72 @@
 				<li><span class="abbr">Almk 2</span> = continuation of above, ed. K. V. Zetterstéen, in <i>Le Monde Oriental</i>, 1925.</li>
 				<li><span class="abbr">ALR</span> = Accademia dei Lincei, <i>Rendiconti</i>.</li>
 				<li><span class="abbr">Am</span> = Amos.</li>
-				<li><span class="abbr">AM</span> = H. Hyvernat, <i>Actes des Martyrs</i>, 1886.</li>
+				<li class="found"><span class="abbr">AM</span> = H. Hyvernat, <i>Actes des Martyrs</i>, 1886.</li>
 				<li><span class="abbr">Ann</span> = <i>Annales du Service des Antiquités</i>, Cairo.</li>
 				<li><span class="abbr">Ap</span> = Apocalypse.</li>
-				<li><span class="abbr">AP</span> = <i>Acta Pauli</i>, ed. C. Schmidt, 1904, acc. to <i>asterisked</i> pp. of book.</li>
+				<li class="found"><span class="abbr">AP</span> = <i>Acta Pauli</i>, ed. C. Schmidt, 1904, acc. to <i>asterisked</i> pp. of book.</li>
 				<li><span class="abbr">Ar</span>, <span class="abbr">ar</span> = Arabic.</li>
 				<li><span class="abbr">art</span> = article.</li>
 				<li><span class="abbr">Asmus</span> = H. Asmus, <i>Über Fragmente im mitteläg. Dialekt</i> (Dissert.), 1904, acc. to pp.</li>
 				<li><span class="abbr">AZ</span> = <i>Zeitschr. f. Aegyptische Sprache</i>, acc. to vols.</li>
+				<li><i class="dialect">B</i> = Bohairic dialect.</li>
+				<li><span class="abbr">Bal</span> = papyri from Balaizah, in Bodleian, in so far as not numbered in series “Bodl. Copt. (P)”.</li>
+				<li><span class="abbr">Balestri</span> = <i>Sacr. Bibl. Fragm.</i>, III, ed. I. Balestri, 1904.</li>
+				<li><span class="abbr">Baouit</span> = <i>Le Monastère de B.</i>, ed. J. Clédat, I &amp; II (= MIF. xii), 1904 ff.</li>
+				<li><span class="abbr">BAp</span> = Budge, <i>Coptic Apocrypha</i>, 1913.</li>
+				<li><span class="abbr">Bar</span> = Baruch.</li>
+				<li><span class="abbr">Berl. Or</span> = MSS. in the Staats (<i>olim</i> Kgl.) bibliothek, Berlin (Crum's copies).</li>
+				<li><span class="abbr">Berl. <i>Wörterb</i></span> = Erman &amp; Grapow, <i>Wörterbuch d. Aeg. Sprache</i>, 1926–31.</li>
+				<li><span class="abbr">Besa</span> <i>v</i> <span class="abbr">Sh</span> (Shenoute).</li>
+				<li><span class="abbr">Bess</span> = <i>Bessarione</i> (periodical), acc. to vols.</li>
+				<li><span class="abbr">BG</span> = Berlin Gnostic Papyrus 8502 (<i>cf.</i> Preuss. Akad., <i>Sitz.</i> xxxvi, 839), from photographs.</li>
+				<li><span class="abbr">BHom</span> = Budge, <i>Coptic Homilies</i>, 1910.</li>
+				<li><span class="abbr">BIF</span> = <i>Bulletin de l'Instit. français…au Caire</i>.</li>
+				<li><span class="abbr">BKU</span> = Berliner <i>Kopt. Urkunden</i>, acc. to vol., no. and, in long texts, lines.</li>
+				<li><span class="abbr">Blake</span> = Epiphanius, <i>De XII Gemmis</i>, ed. R. P. Blake, Coptic fragts. by H. De Vis, 1934 (in Lake's <i>Studies &amp; Documents</i>).</li>
+				<li><span class="abbr">BM</span> = British Museum, <i>Catalogue of Coptic MSS.</i>, 1905, acc. to numbers.</li>
+				<li class="found"><span class="abbr">BMar</span> = Budge, <i>Coptic Martyrdoms</i>, 1914.</li>
+				<li><span class="abbr">BMEA</span> = British Museum, Dept. of Egyptian &amp; Assyr. Antiquities (papyri, ostraca, inscriptions).</li>
+				<li class="found"><span class="abbr">BMis</span> = Budge, <i>Miscellaneous Coptic Texts</i>, 1915.</li>
+				<li><span class="abbr">Bodl</span> = Coptic MSS. in Bodleian, as (P) a 1 <i>e</i>, where italic = folio.</li>
+				<li><span class="abbr">Bor</span> = Codex Borgianus (where not printed by Zoega).</li>
+				<li><span class="abbr">BP</span> = Papyri &amp; ostraca in Staatsmuseum, Berlin.</li>
+				<li class="found"><span class="abbr">Br</span> = <i>Gnostische Schr. in Kopt. Sprache</i> (Pap. Bruce), ed. C. Schmidt, 1892.</li>
+				<li><span class="abbr">BSG</span> = Budge, <i>Martyrdom &amp; Miracles of St. George</i>, 1888.</li>
+				<li class="found"><span class="abbr">BSM</span> = Budge, <i>St. Michael the Archangel</i>, 1894.</li>
+				<li class="found"><span class="abbr">C</span> = <i>Corpus Scriptorum Christian. Oriental.</i>, acc. to the “numéros d'ordre”:
+					<ul>
+						<li>T. 41 <i>Sinuthii Vita</i>, ed. J. Leipoldt, 1906.</li>
+						<li>42, 73 <i>Sinuthii Opera</i>, do., 1908, 1913.</li>
+						<li>43, 86 <i>Acta Martyrum</i>, edd. I. Balestri &amp; H. Hyvernat, 1907, 1924.</li>
+						<li>89, 99, 100 <i>S. Pachomii Vitae</i>, ed. L. Th. Lefort, 1925, 1933.</li>
+					</ul>
+				</li>
+				<li><span class="abbr">c</span> = constructed with (of verbs).</li>
+				<li><span class="abbr">CA</span> = <i>Canons of Athanasius</i> ed. Riedel &amp; Crum (Text &amp; Transl. Soc.), 1904.</li>
+				<li><span class="abbr">Cai</span> = MSS. &amp;c. in the Egyptian Museum, Cairo.</li>
+				<li><span class="abbr">(Cai)CoptMus</span> = MSS. &amp;c. in Coptic Museum, Cairo.</li>
+				<li><span class="abbr">CaiEuch</span> = <i>Kitâb al-Khulâgy al-Muḳaddas (Euchologion)</i>, Cairo, 1902.</li>
+				<li><span class="abbr">CaiThe</span> = (Theotokia) <i>v</i> Absal.</li>
+				<li><span class="abbr">Cant</span> = Song of Songs.</li>
+				<li><span class="abbr">Cat</span> = <i>Catenae in Evangelia, ed.</i> Lagarde, 1886.</li>
+				<li><span class="abbr">caus</span> = causative verb.</li>
+				<li><span class="abbr">CCVaI</span> = <i>Codicas Coptici Vaticani</i> &amp;c., T.I, edd. Hebbelynck &amp; Lantschoot, Rome, 1937.</li>
+				<li><span class="abbr">CDan</span> = L. Clugnet, <i>Vie de l'Abbá Daniel</i>, wherein Guidi's Coptic text, acc. to pp. of this work.</li>
+				<li><span class="abbr">Chaîne</span> = M. Chaîne, <i>Eléments de gram. dialectale copte</i>, 1933.</li>
+				<li><span class="abbr">Chr.</span> = Chronicles.</li>
+				<li><span class="abbr">cit</span> = cited, quoted in following place.</li>
+				<li><span class="abbr">Cl</span> = C. Schmidt, <i>Der I. Clemensbrief.</i> 1908 } acc. to chh.</li>
+				<li><span class="abbr">—</span> = F. Röach, <i>Bruchstücke des I. Clem.</i> 1910 } of Greek text.</li>
+				<li><span class="abbr">ClPr</span> = Woide's MSS. belonging to the Clarendon Press (Crum's copies &amp; photographs).</li>
+				<li><span class="abbr">CMSS</span> = Crum, <i>Coptic MSS. from Fayyûm</i>, 1893, acc. to pp.</li>
+				<li><span class="abbr">CO</span> = Crum, <i>Coptic Ostraca</i>, 1902.</li>
+				<li><span class="abbr">Col</span> = Epistle to Colossians.</li>
+				<li><span class="abbr">Cor</span> = Epistles to Corinthians.</li>
+				<li><span class="abbr">CR</span> = <i>Comptes Rendus de l'Acad. des Inscr.</i>, Paris, acc. to year &amp; page.</li>
+				<li></li>
+				<li></li>
+				<li></li>
 				<li></li>
 			</ul>
 		</p>
