--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -87,6 +87,59 @@
 				<li><span class="abbr">Col</span> = Epistle to Colossians.</li>
 				<li><span class="abbr">Cor</span> = Epistles to Corinthians.</li>
 				<li><span class="abbr">CR</span> = <i>Comptes Rendus de l'Acad. des Inscr.</i>, Paris, acc. to year &amp; page.</li>
+				<li><span class="abbr">Dan</span> = Daniel.</li>
+				<li><span class="abbr">dem</span> = demotic.</li>
+				<li><span class="abbr">Deu</span> = Deuteronomy.</li>
+				<li><span class="abbr">DeV</span> = H. De Vis, <i>Homélies Coptes</i> (= <i>Coptica</i> I, V), 1922, 1929 (DeV alone = vol. 1).</li>
+				<li><span class="abbr">Dif</span> <i>The Difnar</i>, ed. O'Leary, I, II, III, 1926–30.</li>
+				<li><span class="abbr">diff</span> = different reading, not useful for comparison.</li>
+				<li><span class="abbr">DM</span> = <i>Demotic Magical Papyrus</i>, ed. Griffith &amp; Thompson, 1904 ff.</li>
+				<li><span class="abbr">do</span> = ditto, same as last word cited in this dialect.</li>
+				<li><span class="abbr">Dozy</span> = R. Dozy, <i>Supplém. aux dict. arabes</i>, 1881.</li>
+				<li><span class="abbr">Eccl</span> = Ecclesiastes.</li>
+				<li><span class="abbr">EES</span> = Egypt Exploration Soc. (<i>olim</i> Fund), MSS. &amp;c. in their possession (Crum's copies).</li>
+				<li><span class="abbr">El</span> = <i>Die Apokalypse d. Elias</i>, ed. G. Steindorff, 1899.</li>
+				<li><span class="abbr">EnPeterson</span> = phot. of vellum leaves lent by Enoch P. (Univ. of Michigan). Originals not now traceable.</li>
+				<li><span class="abbr">Ep</span> = <i>Monastery of Epiphanius</i>, ed. Winlock, Crum &amp; Evelyn White, 1926, acc. to numbers.</li>
+				<li><span class="abbr">Eph</span> = Epistle to Ephesians.</li>
+				<li><span class="abbr">EpJer</span> = Epistle of Jeremiah.</li>
+				<li><span class="abbr">esp</span> = especially.</li>
+				<li><span class="abbr">Est</span> = Esther.</li>
+				<li><span class="abbr">EtLeem</span> = <i>Études…dédiées à C. Leemans</i>, 1885.</li>
+				<li><span class="abbr">EW</span> = <i>New Texts from the Monastery of St. Macarius</i>, ed. H. G. Evelyn White, 1926.</li>
+				<li><span class="abbr">—</span> = do., his copies of MSS from Nitria (in Coptic Museum, Cairo).</li>
+				<li><span class="abbr">Ex</span> = Exodus.</li>
+				<li><span class="abbr">Ez</span> = Ezekiel.</li>
+				<li><span class="abbr">f</span> = feminine.</li>
+				<li><i class="dialect">F</i> = Fayyûmic &amp; related dialects; <i class="dialect">F<sup>b</sup></i> do. with Bohairic tendency.</li>
+				<li><span class="abbr">Faras</span> = Griffith, <i>Oxford Excavations in Nubia</i>, in Liverpool <i>Annals of Archaeol. &amp; Anthropol.</i> (1) xiii 17, (2) <i>ib.</i> 49, (3) xiv 57.</li>
+				<li><span class="abbr">FR</span> = Forbes Robinson, <i>Coptic Apocr. Gospels</i> (= <i>Texts &amp; Studies</i> iv), 1896.</li>
+				<li><span class="abbr">Gal</span> = Epistle to Galatians.</li>
+				<li><span class="abbr">Ge</span> = Genesis.</li>
+				<li><span class="abbr">gen</span> = genitive.</li>
+				<li><span class="abbr">GFr</span> = Georgi, <i>Fragm. Evang. S. Iohannis</i>, 1789.</li>
+				<li><span class="abbr">Gk</span> = Greek.</li>
+				<li><span class="abbr">Glos</span> = Greek-Coptic Glossary, ed. Bell &amp; Crum, in <i>Aegyptus</i> vi 179, acc. to lines.</li>
+				<li><span class="abbr">GMir</span> = Georgi, <i>Miracula S. Coluthi</i>, 1793.</li>
+				<li><span class="abbr">GöttA</span> = Göttinger <i>Abhandlungen</i>; GöttN = do. <i>Nachrichten</i>.</li>
+				<li><span class="abbr">GPar</span> = S. Gaselee. <i>Parerga Coptica</i>, 1912, 1914.</li>
+				<li><span class="abbr">GriffStu</span> = <i>Studies Presented to F. Ll. Griffith</i>, 1932.</li>
+				<li><span class="abbr">Gu</span> = I. Guidi, <i>Frammenti Copti</i> I–VII (from ALR 1887 ff.), acc. to continuous pagination.</li>
+				<li><span class="abbr">GuDorm</span> = I. Guidi, <i>Teste…sopra i Sette Dormienti</i> (Mem. Acad. Linc., 1884).</li>
+				<li><span class="abbr">H</span> = G. Horner's text of N.T., 1898–1924.</li>
+				<li><span class="abbr">Hab</span> = Habakkuk.</li>
+				<li><span class="abbr">Hag</span> = Haggai.</li>
+				<li><span class="abbr">Hall</span> = H. R. Hall, <i>Coptic &amp; Greek Texts…Brit. Museum</i>, 1905, acc. to pp.</li>
+				<li><span class="abbr">HCons</span> = G. Horner, <i>Consecration of Church &amp; Altar</i>, 1902.</li>
+				<li><span class="abbr">He</span> = Epistle to Hebrews.</li>
+				<li><span class="abbr">HengB</span> = W. Hengstenberg in <i>Beiträge z. Forschung…</i> Heft III, J. Rosenthal, München, 1914.</li>
+				<li><span class="abbr">HL</span> = E. Amélineau, <i>De Historia Lausiaca</i>, 1887; but <i>Hist Laus</i> = E. C. Butler's edition of Greek text (= <i>Texts &amp; Studies</i> vi).</li>
+				<li><span class="abbr">Hor</span> = Griffith, <i>The Old Coptic Horoscope</i>, in AZ 38 76 ff., acc. to pp. of publication.</li>
+				<li><span class="abbr">Hos</span> = Hosea.</li>
+				<li><span class="abbr">HSt</span> = G. Horner, <i>Statutes of the Apostles</i>, 1904; <i>v</i> also Stat.</li>
+				<li><span class="abbr">HT</span> = Sir Herbert Thompson's Saʿîdic MSS. (now in Cambridge Univ. Library), acc. to letters (<i>B–Z</i>) which distinguish them; or other references to him.</li>
+				<li></li>
+				<li></li>
 				<li></li>
 				<li></li>
 				<li></li>
