--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -138,12 +138,113 @@
 				<li><span class="abbr">Hos</span> = Hosea.</li>
 				<li><span class="abbr">HSt</span> = G. Horner, <i>Statutes of the Apostles</i>, 1904; <i>v</i> also Stat.</li>
 				<li><span class="abbr">HT</span> = Sir Herbert Thompson's Saʿîdic MSS. (now in Cambridge Univ. Library), acc. to letters (<i>B–Z</i>) which distinguish them; or other references to him.</li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><span class="abbr">IF</span> = Institut français, Cairo, MS. of Shenoute's Epistles (H. Munier's copy).</li>
+				<li><span class="abbr">IgR</span> = Ignazio Rossi, <i>Etymologiae Aegyptiacae</i>, 1808.</li>
+				<li><span class="abbr">ImpRussArS</span> = Imperial Russian Archaeolog. Soc. xviii, 1907 (Turaief).</li>
+				<li><span class="abbr"><i>inf</i></span> = <i>infra</i>.</li>
+				<li><span class="abbr">interj</span> = interjection.</li>
+				<li><span class="abbr">interrog</span> = interrogative.</li>
+				<li><span class="abbr">intr</span> = intransitive (<i>i.e.</i> verb without immediate object, or one constructed with prep. <span class="coptic">ⲉ-</span>).</li>
+				<li><span class="abbr">Is</span> = Isaiah.</li>
+				<li><span class="abbr">J</span> = Crum &amp; Steindorff, <i>Kopt. Rechtsurkunden…aus Djême</i>, acc. to no. &amp; line; JLeip = two such papyri in Leipzig University, Aegyptologisches Institut (<i>cf</i> below).</li>
+				<li><span class="abbr">Ja</span> = Epistle of James.</li>
+				<li><span class="abbr">JA</span> = <i>Journal Asiatique</i>, acc. to year, vol. &amp; page.</li>
+				<li><span class="abbr">J&amp;C</span> = H. I. Bell, <i>Jews &amp; Christians</i>, 1924, acc. to pp.</li>
+				<li><span class="abbr">JAOS</span> = <i>Journ. of American Orient. Soc.</i></li>
+				<li><span class="abbr">Jer</span> = Jeremiah.</li>
+				<li><span class="abbr">Jern</span> = P. Jernstedt, <i>Kopt. Papyri d. Asiat. Mus.</i> (Soc. Egyptol. Univ. Leningrad, no. 6, 1930), acc. to numbers.</li>
+				<li><span class="abbr">JKP</span> = H. Junker, <i>Koptische Poesie</i>, 1908, 1911 (from <i>Oriens Christianus</i>.)</li>
+				<li><span class="abbr">Jo</span> = John.</li>
+				<li><span class="abbr">Jon</span> = Jonah.</li>
+				<li><span class="abbr">Jos</span> = Joshua.</li>
+				<li><span class="abbr">JSch</span> = A. A. Schiller, <i>Ten Coptic Legal Texts</i>, New York, 1932 (includes JLeip, <i>v</i> above), acc. to numbers &amp; lines.</li>
+				<li><span class="abbr">Jth</span> = Judith.</li>
+				<li><span class="abbr">JTS</span> = <i>Journal of Theological Studies</i>.</li>
+				<li><span class="abbr">Jud</span> = Judges.</li>
+				<li><span class="abbr">K</span> = A. Kircher, the <i>Scalæ</i> in <i>Lingua Aegyptiaca Restituta</i>, variants from Loret in <i>Ann.</i> I and other MSS.</li>
+				<li><span class="abbr">Kam</span> = <i>Kambysesroman</i> in BKU I, no. 31, acc. to pp. in lower margins &amp; line.</li>
+				<li><span class="abbr">Kandil</span> = <span class="coptic">ⲡϫⲱⲙ ⲛⲧⲉ ⲡⲓⲑⲱϩⲥ ⲉⲑ︤ⲩ︥</span> (<i>Kitâb al-Masḥah, ay al-Ḳandîl</i>), ed. C. Labîb, Cairo, AM. 1625, <i>v</i> TRit 144 ff.</li>
+				<li><span class="abbr">Kg</span> = 1, 2 Samuel, &amp; 1, 2 Kings.</li>
+				<li><span class="abbr">KKS</span> = O. von Lemm, <i>Kleine Kopt. Studien</i>, acc. to continuous pagination.</li>
+				<li><span class="abbr">Kr</span> = J. Krall, <i>Kopt. Texte</i> (Rainer <i>Corpus</i> II), acc. to numbers.</li>
+				<li><span class="abbr">Kropp</span> = A. Kropp, <i>Ausgewählte Kopt. Zaubertexte</i>, 1930–31, numbered by letters A, B &amp;c.</li>
+				<li><span class="abbr"><i>l</i></span> = <i>legendum</i>.</li>
+				<li><span class="abbr">Lab</span> = C. Labîb, Coptic-Arabic Dictionary (<span class="coptic">ⲡⲓⲗⲉⲝⲓⲕⲟⲛ ⲛϯⲁⲥⲡⲓ ⲛⲧⲉ ⲛⲓⲣⲉⲙⲛⲭⲏⲙⲓ</span> <i>Ḳâmûs al-Luġah al-Ḳibṭîyah al-Maṣrîyah</i>), Cairo, AM. 1611 ff.</li>
+				<li><span class="abbr">Lacau</span> = fragments of Jo &amp; Ap <i class="dialect">F</i>, copied by P. Lacau (<i>v</i> <i>Bull. Corr. Hellén.</i> xxv 400)</li>
+				<li><span class="abbr">Lacr</span> = M. V. La Croze, <i>Lexicon Aegyptiaco-Latinum</i>, 1775.</li>
+				<li><span class="abbr">Lag</span> = P. de Lagarde, his editions of Coptic texts.</li>
+				<li><span class="abbr">Lakân</span> = <i>Kitâb al-Lakân</i>, Cairo, 1921.</li>
+				<li><span class="abbr">LAl</span> = Lemm, <i>Der Alexanderroman</i>.</li>
+				<li><span class="abbr">Lam</span> = Lamentations.</li>
+				<li><span class="abbr">Lammayer</span> = <i>Die sogen. Gnomen d. Concils v. Nicaea</i> (Dissert.), Beirut, 1912.</li>
+				<li><span class="abbr">Lant.</span> = A. van Lantschoot, <i>Recueil de Colophons…sahidiques</i>, 1929, acc. to numbers; also copies by.</li>
+				<li><span class="abbr">LAp</span> = Lemm, <i>Apokryphe Apostelacten</i>.</li>
+				<li><span class="abbr">LBib</span> = Lemm, <i>Sahidische Bibelfragmente</i> I, II, III.</li>
+				<li><span class="abbr">LCypr</span> = Lemm, <i>Cyprian v. Antiochien</i>.</li>
+				<li><span class="abbr">LDi</span> = Lemm, <i>Eine dem Dionysios Areopag. zugeschr. Schrift</i>.</li>
+				<li><span class="abbr">Lect</span> = Lectionary.</li>
+				<li><span class="abbr">Leip</span> = Leipzig University, Tischendorf's Bohairic MSS. (Crum's copies).</li>
+				<li><span class="abbr">LeipBer</span> = <i>Berichte</i> d. phil.-histor. Klasse d. kgl. säch. Gesellsch. d. Wissensch.</li>
+				<li><span class="abbr">Lev</span> = Leviticus.</li>
+				<li><span class="abbr">Leyd</span> = <i>Manuscrits coptes du Musée…à Leide</i>, 1897, acc. to pages.</li>
+				<li><span class="abbr">LeydAC</span> = <i>Antiquités Coptes</i> (Catal. du Musée), 1900, acc. to pages.</li>
+				<li><span class="abbr">LIb</span> = Lemm, <i>Iberica</i>.</li>
+				<li><span class="abbr">lit</span> = literally.</li>
+				<li><span class="abbr">LMär</span> = Lemm, <i>Bruchstücke Kopt. Märtyrerakten</i>.</li>
+				<li><span class="abbr">LMis</span> = Lemm, <i>Koptische Miscellen</i>, acc. to continuous pagination.</li>
+				<li><span class="abbr">Löw</span> = Im. Löw, <i>Aramäische Pflanzennamen</i>, 1881, acc. to pp.</li>
+				<li><span class="abbr">LöwF</span> = <i>Flora der Juden</i>, 1926 ff.</li>
+				<li><span class="abbr">Lu</span> = Luke.</li>
+				<li><span class="abbr">m</span> = masculine.</li>
+				<li><span class="abbr">Mac</span> = Maccabees.</li>
+				<li><span class="abbr">Mal</span> = Malachi.</li>
+				<li><span class="abbr">Mallon</span> = A. Mallon, <i>Grammaire copte</i><sup class="footnote">2</sup>, 1907.</li>
+				<li><span class="abbr">Mani1</span> = copies of Chester Beatty's unpublished Manichaean papyri by H. J. Polotsky &amp; H. Thompson.</li>
+				<li><span class="abbr">Mani2</span> = copies of sim. papyri at Berlin by Polotsky.</li>
+				<li><span class="abbr">ManiH</span> = <i>Manichäische Homelien</i>, ed. Polotsky, 1934.</li>
+				<li><span class="abbr">ManiK</span> = <i>Kephalaia</i>, edd. Polotsky &amp; A. Böhlig, 1934 ff.</li>
+				<li><span class="abbr">ManiP</span> = <i>A Manichaean Psalm-book</i>, Pt. ii, ed. C. R. C. Allberry, 1938.</li>
+				<li><span class="abbr">MartIgn</span> = Lightfoot, <i>Ignatius</i><sup class="footnote">1</sup>, ii 1 865 ff.</li>
+				<li><span class="abbr">MélOr</span> = <i>Mélanges de la Faculté Orientale</i>, Université de Beyrouth.</li>
+				<li><span class="abbr">MG</span> = <i>Annales du Musée Guimet</i>, Paris.</li>
+				<li><span class="abbr">Mic</span> = Micah.</li>
+				<li><span class="abbr">Mich 550</span>, a series of vellum leaves at Michigan University, independently numbered thus (but <i>cf</i> note in Preface).</li>
+				<li><span class="abbr">MIE</span> = <i>Mémoires de l'Instit. Égyptien</i>, Cairo.</li>
+				<li><span class="abbr">MIF</span> = <i>Mémoires…de l'Instit. franç. d'Archéol. orient. au Caire</i>.</li>
+				<li><span class="abbr">Ming</span> = J. A. Mingarelli, <i>Aegyptiorum Codd. Reliquiae</i>, 1785.</li>
+				<li><span class="abbr">Miss</span> = <i>Mémoires…de la Mission archéol. franç. au Caire</i>.</li>
+				<li><span class="abbr">Mk</span> = Mark.</li>
+				<li><span class="abbr">MMA</span> = MSS. &amp; ostraca in the Metropolitan Museum of Art, New York.</li>
+				<li><span class="abbr">Montp</span> = Bohairic <i>Scala</i> in library of Faculté de Médecine, Montpellier (H. Munier's copy).</li>
+				<li class="found"><span class="abbr">Mor</span> = MSS. belonging to Mr. J. Pierpont Morgan, New York, as reproduced &amp; numbered in 56 vols. of photographs, acc. to nos. &amp; pp. of these volumes (not identical with those of <i>Check List</i>, 1919).</li>
+				<li><span class="abbr">MR</span> = <i>Mittheilungen a. d. Papyrussamml. Erzh. Rainer</i>.</li>
+				<li><span class="abbr">Mt</span> = Matthew.</li>
+				<li><span class="abbr">Mun</span> = <i>Manuscrits coptes</i>, par H. Munier (Catal. Gén. Musée du Caire, 1916), acc. to pages.</li>
+				<li><span class="abbr">Mus</span> = <i>Le Muséon</i> (periodical), acc. to pages.</li>
+				<li><span class="abbr">My</span> = <i>Le Mystère des Lettres grecques</i>, ed. A. Hebbelynck (from <i>Muséon</i>, 1900, 1901).</li>
+				<li><span class="abbr">N&amp;E</span> = <i>Notices et Extraits des MSS. de la Bibliothèque Nationale</i>, Paris.</li>
+				<li><span class="abbr">Nah</span> = Nahum.</li>
+				<li><span class="coptic">ⲛ︤ⲉ︥</span> = <span class="coptic">ⲛⲟⲩⲧⲉ</span>.</li>
+				<li><span class="abbr">nn</span> = noun.</li>
+				<li><span class="abbr">Nu</span> = Numbers.</li>
+				<li><i class="dialect">O</i> = Old Coptic idiom (AZ 21 93 ff., 38 76 ff.)</li>
+				<li><span class="abbr">Ob</span> = Obadiah.</li>
+				<li><span class="abbr">obj</span> = object.</li>
+				<li><span class="abbr">O'LearyH</span> = De Lacy O'Leary: <i>Fragmentary Coptic Hymns</i>, 1924.</li>
+				<li><span class="abbr">—The</span> = De Lacy O'Leary: <i>The Coptic Theotokia</i>, 1923.</li>
+				<li><span class="abbr">OLZ</span> = <i>Orientalistische Litteraturzeitung</i>.</li>
+				<li><span class="abbr">om</span> = omits, omitted.</li>
+				<li><span class="abbr">opp</span> = as opposed to, contrasted with.</li>
+				<li><span class="abbr">Ora</span> = <i>Orientalia</i> (periodical), Rome.</li>
+				<li><span class="abbr">OratCyp</span> = <i>Oratio Cypriani</i> in <i>Veröffentl. a. d. badischen Papyrussamml.</i>, Heft 5, 1934, p. 305 ff.</li>
+				<li><span class="abbr">OrChr</span> = <i>Oriens Christianus</i> (periodical).</li>
+				<li><span class="abbr">Osir</span> = M. A. Murray, <i>The Osireion</i>, 1904.</li>
+				<li><span class="abbr">Ostr</span> = ostracon.</li>
+				<li><span class="abbr">Ostr.Chicago</span> = Till's copies of ostraca from Chicago Expedition, 1931.</li>
+				<li><span class="abbr"></span></li>
+				<li><span class="abbr"></span></li>
+				<li><span class="abbr"></span></li>
+				<li><span class="abbr"></span></li>
 			</ul>
 		</p>
 		<p>
