--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -241,10 +241,135 @@
 				<li><span class="abbr">Osir</span> = M. A. Murray, <i>The Osireion</i>, 1904.</li>
 				<li><span class="abbr">Ostr</span> = ostracon.</li>
 				<li><span class="abbr">Ostr.Chicago</span> = Till's copies of ostraca from Chicago Expedition, 1931.</li>
-				<li><span class="abbr"></span></li>
-				<li><span class="abbr"></span></li>
-				<li><span class="abbr"></span></li>
-				<li><span class="abbr"></span></li>
+				<li><span class="abbr">P</span> = MSS. in the Bibliothèque Nationale, Paris (Crum's copies).</li>
+				<li><span class="abbr">PAl</span> = Papyri in Museum at Alexandria, ed. de Ricci &amp; Winstedt in <i>Sphinx</i> x, also Crum's copies.</li>
+				<li><span class="abbr">PAmh</span> = <i>The Amherst Papyri</i>, ed. Grenfell &amp; Hunt, 1901.</li>
+				<li><span class="abbr">paral</span> = parallel word or phrase.</li>
+				<li><span class="abbr">PasH</span> = Paschal Hymns: <i>Kitâb Ṭaruḥât al-Baskhah al-Muḳaddasah</i>, Old Cairo, 1914.</li>
+				<li><span class="abbr">PasLect</span> = <span class="coptic">ⲡⲓϫⲱⲙ ⲛⲧⲉ ⲡⲓⲡⲁⲥⲭⲁ ⲉⲑ︤ⲃ︥</span>, Cairo, 1921 (<i>cf</i> PO xxiv).</li>
+				<li><span class="abbr"><i>pass</i></span> = <i>passim</i>.</li>
+				<li><span class="abbr">PBad</span> = <i>Veröffentl. a. d. badischen Papyrussamml.</i>, Heft 5.</li>
+				<li><span class="abbr">P. Beatty</span> = Papyri in collection of Mr. Chester Beatty, London (Crum's copies).</li>
+				<li><span class="abbr">PBu</span> = Coptic legal papyrus <i>olim penes</i> Sir E. A. W. Budge (Crum's copy), now at Columbia University.</li>
+				<li><span class="abbr">p c</span> = conjunctive participle.</li>
+				<li><span class="abbr">PCai</span> = <i>Papyrus grecs d'époque byzantine</i>, ed. J. Maspero (Catal. Gén. Musée du Caire, 1911 ff.).</li>
+				<li><span class="abbr">PChass</span> = Two medical papyri <i>penes</i> E. Chassinat.</li>
+				<li><span class="abbr">Pcod</span> = <i>Papyruscodex saec. vi–vii…Cheltenham</i>, ed. Crum, 1915, acc. to pp. of printed book.</li>
+				<li><span class="abbr">PcodF</span> = fayyûmic text of same, ed. W. Erichsen (Danish Acad., 1932).</li>
+				<li><span class="abbr">PcodMor</span> = Mr. Pierpont Morgan's papyrus volume of Psalms &amp;c. (H. Thompson's copy).</li>
+				<li><span class="abbr">PCol</span> = Papyri at Columbia University, New York (A. Schiller's copies).</li>
+				<li><span class="abbr">Pet</span> = Epistles of Peter.</li>
+				<li><span class="abbr">Pey</span> = A. Peyron, <i>Lexicon Linguae Copticae</i>, 1835.</li>
+				<li><span class="abbr">PG</span> = Migne's <i>Patrologia</i>, Series Graeca.</li>
+				<li><span class="abbr">PGen</span> = magical papyrus in University Library, Geneva (photograph).</li>
+				<li><span class="abbr">PGM</span> = <i>Papyri Graecae Magicae</i>, ed. K. Preisendanz I, II, 1928, 1931.</li>
+				<li><span class="abbr">PGol</span> = Papyri formerly in W. Golenischeff's collection, from photographs sent by O. von Lemm.</li>
+				<li><span class="abbr">Phil</span> = Epistle to Philippians.</li>
+				<li><span class="abbr">PJkôw</span> = Papyri (6th c.) thence, Cairo Mus. (Lacau's copies).</li>
+				<li><span class="abbr">pl</span> = plural.</li>
+				<li><span class="abbr">PLich</span> = Papyri belonging to N. P. Lichatschev (P. Jernstedt's copies).</li>
+				<li><span class="abbr">PLond</span> = <i>Greek Papyri in British Museum</i>, ed. Kenyon &amp; Bell, acc. to pp.</li>
+				<li><span class="abbr">PMéd</span> = <i>Un Papyrus Médical Copte</i>, ed. E. Chassinat (= MIF. 32), 1921, acc. to pp.</li>
+				<li><span class="abbr">PMich</span> = Papyri at Michigan University, with year of acquisition where no. not ascertained.</li>
+				<li><span class="abbr">PMon</span> = <i>Byzantinische Papyri…zu München</i>, ed. Heisenberg &amp; Wenger, 1914, acc. to pp.</li>
+				<li><span class="abbr">PNolot</span> = rest of papyrus ed. V. Loret, <i>Rec</i> 16 103 (Kuentz's copy).</li>
+				<li><span class="abbr">PO</span> = <i>Patrologia Orientalis</i>.</li>
+				<li><span class="abbr">poss</span> = possessive pronoun.</li>
+				<li><span class="abbr">POxy</span> = <i>Oxyrhynchus Papyri</i>, ed. Grenfell &amp; Hunt.</li>
+				<li><span class="abbr">PRain</span> = Papyri in the Rainer Collection (Staatsbibl.), Vienna (Till's copies), more often as Vi.</li>
+				<li><span class="abbr">pref</span> = prefix.</li>
+				<li><span class="abbr">Preisigke</span> = F. Preisigke, <i>Namenbuch</i>, 1922.</li>
+				<li><span class="abbr">prep</span> = preposition.</li>
+				<li><span class="abbr">pres</span> = present tense, thus: 1 pres, 2 pres.</li>
+				<li><span class="abbr">Pro</span> = Proverbs.</li>
+				<li><span class="abbr">prob</span> = probably.</li>
+				<li><span class="abbr">pron</span> = pronoun.</li>
+				<li class="found"><span class="abbr">PS</span> = <i>Pistis Sophia</i>, ed. C. Schmidt (= <i>Coptica</i> II), 1925.</li>
+				<li><span class="abbr">Ps</span> = Psalms, acc. to the LXX numeration.</li>
+				<li><span class="abbr">PSBA</span> = <i>Proceedings of Soc. of Biblical Archaeology</i>.</li>
+				<li><span class="abbr">PStras</span> = Papyri in University Library, Strassburg (Crum's copies, 1912).</li>
+				<li><span class="abbr">PVi</span> = Papyri in Staatsbibliothek, Vienna (Till's copies).</li>
+				<li><span class="abbr">qual</span> = qualitative of verb; also indicated by <span class="abbr">†</span>.</li>
+				<li><span class="abbr">R</span> = <i>I Papiri Copti…di Torino</i>, ed. F. Rossi, acc. to volume, fascicule &amp; page.</li>
+				<li><span class="abbr">RAC</span> = E. Revillout, <i>Actes et Contrats…de Boulaq et du Louvre</i>, 1876.</li>
+				<li><span class="abbr">RAl</span> = F. Rossi, <i>Alcuni MSS. Copti…di Torino</i> (= Memorie…Torino, ser. ii, tom. xliii), acc. to pp. of separate publication.</li>
+				<li><span class="abbr">RChamp</span> = <i>Recueil d'Études…J. F. Champollion</i>, 1922.</li>
+				<li><span class="abbr">RE</span> = <i>Revue Égyptologique</i>.</li>
+				<li><span class="abbr">Rec</span> = <i>Recueil de Travaux &amp;c.</i></li>
+				<li><span class="abbr">refl</span> = reflexive use.</li>
+				<li><span class="abbr">rel</span> = relative.</li>
+				<li><span class="abbr">Rendiconti</span>, <i>v</i> ALR.</li>
+				<li><span class="abbr">Ricci</span> = MSS. &amp; copies belonging to Seymour de Ricci (Crum's copies).</li>
+				<li><span class="abbr">RNC</span> = F. Rossi, <i>Un Nuovo Cod. Copto</i> (Memorie Accad. Lincei, 1893), acc. to pp. of separate publication.</li>
+				<li><span class="abbr">Ro</span> = Epistle to Romans.</li>
+				<li><span class="abbr">ROC</span> = <i>Revue de l'Orient Chrétien</i>, acc. to vol.</li>
+				<li><span class="abbr">Rösch</span> = F. Rösch, <i>Vorbemerkungen zu e. Gramm. d. achmîmischen Mundart</i>, 1909, acc. to pp.</li>
+				<li><span class="abbr">Ru</span> = Ruth.</li>
+				<li><span class="abbr">Ryl</span> = <i>Catal. of Coptic MSS. in John Rylands Library</i>, 1909, acc. to numbers; RylSuppl = MSS. acquired since publication of catalogue (<i>cf</i> Ryl <i>Bull.</i> 5).</li>
+				<li><i class="dialect">S</i> = Saʿîdic dialect; <i class="dialect">S<sup>a</sup></i> Saʿîdic with Achmîmic tendency (mostly Theban), <i class="dialect">S<sup>f</sup></i> with Fayyûmic tendency.</li>
+				<li><span class="abbr">Sa</span> = Wisdom of Solomon.</li>
+				<li><span class="abbr">Salîb</span> = <i>Kitâb aṣ-Ṣalîb</i>, Cairo, 1921.</li>
+				<li><span class="abbr">Saq</span> = Coptic texts ed. by H. Thompson in Quibell's <i>Excavations at Saqqara</i>, 1909, 1912.</li>
+				<li><span class="abbr">Sdff</span> = G. Steindorff, <i>Koptische Grammatik</i><sup class="footnote">2</sup>, acc. to §§, or information from him.</li>
+				<li><span class="abbr"><i>s f</i></span> = <i>sub fine</i>.</li>
+				<li><span class="abbr">sg</span> = singular.</li>
+				<li><span class="abbr">Sh</span> = works of Shenoute (&amp; of his disciple Besa). Prefixed to all quotations from their writings (doubtfully to Mor 54).</li>
+				<li><span class="abbr">SHel</span> = G. P. G. Sobhy, <i>Le Martyre de St. Hélias</i>, Cairo, 1919.</li>
+				<li><span class="abbr">Si</span> = Ecclesiasticus, acc. to Lagarde's numeration.</li>
+				<li><span class="abbr">sim</span> = similar in use or in meaning to the last quoted instance.</li>
+				<li><span class="abbr">Sitz</span> = <i>Sitzungsberichte</i>.</li>
+				<li><span class="abbr">Sobhy</span> = information supplied by Dr. G. P. G. Sobhy, Cairo.</li>
+				<li><span class="abbr">Spg</span> = W. Spiegelberg, <i>Koptisches Handwörterbuch</i>, 1921.</li>
+				<li><span class="abbr">Sph</span> = <i>Sphinx</i> (periodical).</li>
+				<li><span class="abbr">ST</span> = Crum, <i>Short Texts from Coptic Ostraca &amp; Papyri</i>, 1921.</li>
+				<li><span class="abbr">Stat</span> = G. Horner, <i>Statutes of the Apostles</i>; also HSt.</li>
+				<li><span class="abbr">Stegemann</span> = <i>Kopt. Zaubertexte</i>, ed. V. Stegemann (Sitz. d. Heidelb. Akad., 1934).</li>
+				<li><span class="abbr">Stern</span> = L. Stern, <i>Koptische Grammatik</i>, acc. to §§.</li>
+				<li><span class="abbr">Su</span> = Susanna.</li>
+				<li><span class="abbr">suff</span> = suffix.</li>
+				<li><span class="abbr">Synax</span> = <i>Synaxarium Alexandrinum</i>, ed. J. Forget (<i>CSCO.</i>), 1905, 1912.</li>
+				<li><span class="abbr">Tatt</span> = H. Tattam, <i>Lexicon Aegyptiaco-Latinum</i>, 1835.</li>
+				<li><span class="abbr">TDi</span> = Tuki, <i>Diurnum Alexandrinum</i>, 1750.</li>
+				<li><span class="abbr">TEuch</span> = do., <i>Pontificale et Euchologium</i>, 1761.</li>
+				<li><span class="abbr">Thes</span> = Epistles to Thessalonians.</li>
+				<li><span class="abbr">Ti</span> = Epistle to Titus.</li>
+				<li><span class="abbr">Till</span> = W. Till, <i>Achmîmisch-Kopt. Grammatik</i>, 1928, acc. to §§.</li>
+				<li><span class="abbr">— Bau</span> = <i>Eine Kopt. Bauernpraktik</i> (Mitt. d. deut. Inst. Kairo, vi, 1936).</li>
+				<li><span class="abbr">— Oster</span> = <i>Osterbrief u. Predigt in achm. Dialekt</i>, Vienna, 1931 (at first as Vi 10157).</li>
+				<li><span class="abbr">Tim</span> = Epistles to Timothy.</li>
+				<li><span class="abbr">Tob</span> = Tobit.</li>
+				<li><span class="abbr">Tor</span> = <i>Coptic Ostraca</i>, ed. H. Thompson in <i>Theban Ostraca…Toronto</i> (University of Toronto Studies), 1913, acc. to numbers.</li>
+				<li><span class="abbr">tr</span> = transitive.</li>
+				<li><span class="abbr">Tri</span> = Lemm, <i>Das Triadon</i>, 1903, acc. to stanzas.</li>
+				<li><span class="abbr">TRit</span> = Tuki, <i>Rituale</i>, 1763.</li>
+				<li><span class="abbr">TSBA</span> = Transactions of the Soc. of Bibl. Archaeology.</li>
+				<li><span class="abbr">TstAb</span> = I. Guidi, <i>Testo copto del Testam. di Abramo &amp;c.</i> (= ALR, 1900).</li>
+				<li><span class="abbr">TT</span> = Crum, <i>Theolog. Texts from Coptic Papyri</i>, 1913.</li>
+				<li><span class="abbr">TThe</span> = Tuki, <i>Theotokia</i>, 1764.</li>
+				<li><span class="abbr">TU</span> = Gebhardt, Harnack &amp; C. Schmidt, <i>Texte u. Untersuchungen</i> (Bd. 43 <i>Gespräche Jesu).</i></li>
+				<li><span class="abbr">Tuki</span> = Tuki, <i>Rudimenta Linguae Coptae</i>, 1778.</li>
+				<li><span class="abbr">TurM</span> = B. Turaief, <i>Materiali &amp;c.</i> (<i>v</i> AZ 40 150, <i>Orient. Bibliographie</i> xv, no. 111 <i>a</i>), acc. to numbers.</li>
+				<li><span class="abbr">TurO</span> = do., <i>Koptskia Ostraka…Golenishtshef</i> (= Bull. Acad. Imp. x, no. 5, 1899), acc. to numbers.</li>
+				<li><span class="abbr">Turin ostr</span> = ostraca in Museo Archeol., Turin (Crum's copies).</li>
+				<li><span class="abbr"><i>V</i></span> = <i>vide</i>.</li>
+				<li><span class="abbr">Va</span> = MSS. in Vatican Library, acc. to photographs or to copies by H. De Vis.</li>
+				<li><span class="abbr">var</span> = variant, in same dialect.</li>
+				<li><span class="abbr">vb</span> = verb.</li>
+				<li><span class="abbr">Vi</span> = Vienna, MSS. &amp; ostraca in the Staats (<i>olim</i> Hof) bibliothek.</li>
+				<li><span class="abbr">Wess</span> = C. Wessely, <i>Studien z. Paläographie &amp;c.</i>, acc. to vol. &amp; page.</li>
+				<li><span class="abbr">WHatch</span> = a <i class="dialect">B</i> MS <i>penes</i> the Rev. W. Hatch, Cambridge, Mass.</li>
+				<li><span class="abbr">Win</span> = ostraca from Winlock's excavations 1927–8, in Cairo Museum.</li>
+				<li><span class="abbr">Wor</span> = W. H. Worrell, <i>Coptic MSS. in Freer Collection</i> (University of Michigan Studies), 1923.</li>
+				<li><span class="abbr">WS</span> = Crum &amp; Bell, <i>Coptic Texts from Wadi Sarga</i> (= Coptica III), 1922, acc. to pp.</li>
+				<li><span class="abbr">WTh</span> = E. O. Winstedt, <i>Coptic Texts on St. Theodore</i> (Text &amp; Transl. Soc.), 1910.</li>
+				<li><span class="abbr">WZKM</span> = <i>Wiener Zeitsch. f. d. Kunde d. Morgenlandes</i>.</li>
+				<li><span class="abbr">Z</span> = G. Zoega, <i>Catalogus Codd. Copticorum &amp;c.</i> 1810, acc. to pp.</li>
+				<li><span class="abbr">Zech</span> = Zechariah.</li>
+				<li><span class="abbr">Zeph</span> = Zephaniah.</li>
+				<li><span class="abbr">ZNTW</span> = <i>Zeitsch. f. d. Neutestamentl. Wissenschaft.</i></li>
+				<li><span class="abbr">†</span> = (after verbal forms) qualitative.</li>
+				<li><span class="abbr">( )</span> = Coptic letter inserted by editor, except in headings, where they indicate variants or hypothetical forms.</li>
+				<li><span class="abbr">?</span> = perhaps, possibly.</li>
 			</ul>
 		</p>
 		<p>
