--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -366,7 +366,7 @@
 				<li><span class="abbr">Z</span> = G. Zoega, <i>Catalogus Codd. Copticorum &amp;c.</i> 1810, acc. to pp.</li>
 				<li><span class="abbr">Zech</span> = Zechariah.</li>
 				<li><span class="abbr">Zeph</span> = Zephaniah.</li>
-				<li><span class="abbr">ZNTW</span> = <i>Zeitsch. f. d. Neutestamentl. Wissenschaft.</i></li>
+				<li class="found"><span class="abbr">ZNTW</span> = <i>Zeitsch. f. d. Neutestamentl. Wissenschaft.</i></li>
 				<li><span class="abbr">†</span> = (after verbal forms) qualitative.</li>
 				<li><span class="abbr">( )</span> = Coptic letter inserted by editor, except in headings, where they indicate variants or hypothetical forms.</li>
 				<li><span class="abbr">?</span> = perhaps, possibly.</li>
